@@ -218,7 +218,7 @@ class Disker(feedcomponent.ParseLaunchComponent, log.Loggable):
                 "Check permissions on the file."), self.location))
             self.addMessage(m)
             return
-        self._plug_recording_started(self.file, self.location)
+        self._recordingStarted(self.file, self.location)
         sink.emit('add', self.file.fileno())
         self.uiState.set('filename', self.location)
         self.uiState.set('recording', True)
@@ -257,7 +257,7 @@ class Disker(feedcomponent.ParseLaunchComponent, log.Loggable):
         if self.file:
             self.file.flush()
             sink.emit('remove', self.file.fileno())
-            self._plug_recording_stopped(self.file, self.location)
+            self._recordingStopped(self.file, self.location)
             self.file = None
             self.uiState.set('filename', None)
             self.uiState.set('recording', False)
@@ -387,25 +387,25 @@ class Disker(feedcomponent.ParseLaunchComponent, log.Loggable):
         else:
             self.warning("Cannot parse ICAL; neccesary modules not installed")
 
-    def _plug_recording_started(self, file, location):
+    def _recordingStarted(self, file, location):
         socket = 'flumotion.component.consumers.disker.disker_plug.DiskerPlug'
         # make sure plugs are configured with our socket, see #732
         if socket not in self.plugs:
             return
         for plug in self.plugs[socket]:
-            self.debug('invoking recording_started on '
+            self.debug('invoking recordingStarted on '
                        'plug %r on socket %s', plug, socket)
-            plug.recording_started(file, location)
+            plug.recordingStarted(file, location)
 
-    def _plug_recording_stopped(self, file, location):
+    def _recordingStopped(self, file, location):
         socket = 'flumotion.component.consumers.disker.disker_plug.DiskerPlug'
         # make sure plugs are configured with our socket, see #732
         if socket not in self.plugs:
             return
         for plug in self.plugs[socket]:
-            self.debug('invoking recording_stopped on '
+            self.debug('invoking recordingStopped on '
                        'plug %r on socket %s', plug, socket)
-            plug.recording_stopped(file, location)
+            plug.recordingStopped(file, location)
 
     def _markers_event_probe(self, element, event):
         if event.type == gst.EVENT_CUSTOM_DOWNSTREAM:
